fixes on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,9 +46,10 @@ form{
 #about{
 	padding-top: 20px;
 	background-color: rgba(0, 18, 30, 0.66);
-	width: 100%;
-	height: 300vh;
-	display: block;
+  width: 90%;
+  height: 300vh;
+  display: block;
+  padding: 0 5%;
 }
 #contact{
 	padding-top: 15px;
@@ -99,7 +100,7 @@ i{
 	justify-content: center;
 	color: white;
 	height: 100vh;
-	margin-left: 30px;
+	//margin-left: 30px;
 }
 p{
 	text-align: center;
@@ -180,13 +181,17 @@ header{
 	text-align: center;
 	color: white;
 }
+.glamit.demo{
+	height: 122vh;
+	justify-content: space-around;
+}
 .demo{
 	width: 100%;
-	height: 115vh;
+	height: 105vh;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	flex-direction: column;
 	background-color: rgba(0, 18, 30, 0.66);
 	color: white;
 }
@@ -194,16 +199,19 @@ header{
 	margin-top: 20px;
 	height: 250px;
 	width: 350px;
+	object-fit: contain;
 }
 .t-img{
 	margin-top: 20px;
 	height: 250px;
 	width: 350px;
+	object-fit: contain;
 }
 .r-img{
 	margin-top: 20px;
 	height: 250px;
 	width: 350px;
+	object-fit: contain;
 }
 .glamit-pages{
     display: flex;
@@ -221,6 +229,16 @@ header{
     display: block;
 }
 @media (min-width: 992px) {
+	.demo{
+	width: 100%;
+	height: 115vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	background-color: rgba(0, 18, 30, 0.66);
+	color: white;
+}
 	.glamit-pages{
 		height: 59vh;
 	}
@@ -263,6 +281,8 @@ header{
 	#about{
 		min-height: 100vh;
 		height: auto;
+		width: 96%;
+    padding: 2%;
 	}
 	h2{
 		text-indent: 1.5em;
